I have begun building PDF processing to embed them and upsert to pinecone for semantic search, incomplete

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 json/helius_prompt.json
-conversation_history.db
+ai_resources/conversation_history.db
+ai_resources/new_images/*
+ai_resources/embeddings/*
+ai_resources/pdf_documents/*
