--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+discord.log
 json/*
 ai_resources/conversation_history.db
 ai_resources/new_images/*
 ai_resources/embeddings/*
 ai_resources/pdf_documents/*
-discord.log
+touch ai_resources/pdf_documents/.gitkeep
+touch json/.gitkeep
